[cmake] Add missing file.
This is required since, for example, `Deque+Extras` requires
`_withContiguousStorageIfAvailable_SR14663`.

--- a/Sources/DequeModule/CMakeLists.txt
+++ b/Sources/DequeModule/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(DequeModule
   _DequeBufferHeader.swift
   _DequeSlot.swift
   _UnsafeWrappedBuffer.swift
+  Compatibility.swift
   Deque._Storage.swift
   Deque._UnsafeHandle.swift
   Deque.swift
