Reintroduce PriorityQueue type as a wrapper around MinMaxHeap
It's generic around a Value and a Priority, so contents no longer have
to conform to Comparable directly. It also keeps track of insertion
order, so elements of the same priority will be dequeued in FIFO order.

--- a/Sources/PriorityQueueModule/CMakeLists.txt
+++ b/Sources/PriorityQueueModule/CMakeLists.txt
@@ -12,7 +12,11 @@ add_library(PriorityQueueModule
   Heap.swift
   Heap+ExpressibleByArrayLiteral.swift
   Heap+Invariants.swift
-  Heap+UnsafeHandle.swift)
+  Heap+UnsafeHandle.swift
+  PriorityQueue.swift
+  PriorityQueue+ExpressibleByArrayLiteral.swift
+  PriorityQueue+ExpressibleByDictionaryLiteral.swift
+  PriorityQueue+OrderedViews.swift)
 set_target_properties(PriorityQueueModule PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
