--- a/Sources/PriorityQueueModule/CMakeLists.txt
+++ b/Sources/PriorityQueueModule/CMakeLists.txt
@@ -8,10 +8,10 @@ See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(PriorityQueueModule
-  MinMaxHeap.swift
-  MinMaxHeap+ExpressibleByArrayLiteral.swift
-  MinMaxHeap+Invariants.swift
-  MinMaxHeap+Iterator.swift)
+  Heap.swift
+  Heap+ExpressibleByArrayLiteral.swift
+  Heap+Invariants.swift
+  Heap+Iterator.swift)
 set_target_properties(PriorityQueueModule PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
