--- a/.swiftpm/xcode/xcshareddata/xcschemes/swift-collections-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/swift-collections-Package.xcscheme
@@ -146,6 +146,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BitArrayModule"
+               BuildableName = "BitArrayModule"
+               BlueprintName = "BitArrayModule"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -181,6 +195,16 @@
                BlueprintIdentifier = "CollectionsTestSupportTests"
                BuildableName = "CollectionsTestSupportTests"
                BlueprintName = "CollectionsTestSupportTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BitArrayTests"
+               BuildableName = "BitArrayTests"
+               BlueprintName = "BitArrayTests"
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
