build: repair the ability to build with build tree artifacts
This restores the ability to build swift-collections with build tree
artifacts for the toolchain.  The newly introduced dependency on
Foundation in PriorityQueueModule requires linking against Foundation
and dispatch in the case that the system does not provide the libraries
and you do not have a complete toolchain on hand.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ if(CMAKE_SYSTEM_NAME STREQUAL Windows OR CMAKE_SYSTEM_NAME STREQUAL Darwin)
   option(BUILD_SHARED_LIBS "Build shared libraries by default" YES)
 endif()
 
+if(NOT CMAKE_SYSTEM_NAME STREQUAL Darwin)
+  find_package(dispatch CONFIG QUIET)
+  find_package(Foundation CONFIG QUIET)
+endif()
+
 include(CTest)
 include(SwiftSupport)
 
