Add SetAlgebra conformance to MultiSets.CountedSet
Each requirement has been implemented according to the mathematical definitions, complete with careful documentation to ensure users understand how that may diverge from expectations.

Because Swift.Dictionary does not specify time complexity for every method being used, part of the implementation cannot either.

Tests have been added to exercise all of the SetAlgebra implementation, including each of the axioms required by SetAlgebra.

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Collections.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Collections.xcscheme
@@ -49,6 +49,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "MultiSetsTests"
+               BuildableName = "MultiSetsTests"
+               BlueprintName = "MultiSetsTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
