--- a/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/BitCollections.xcscheme
+++ b/Utils/swift-collections.xcworkspace/xcshareddata/xcschemes/BitCollections.xcscheme
@@ -17,21 +17,21 @@
                BlueprintIdentifier = "BitCollections"
                BuildableName = "BitCollections"
                BlueprintName = "BitCollections"
-               ReferencedContainer = "container:">
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "NO"
-            buildForProfiling = "NO"
+            buildForProfiling = "YES"
             buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BitCollectionsTests"
                BuildableName = "BitCollectionsTests"
                BlueprintName = "BitCollectionsTests"
-               ReferencedContainer = "container:">
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -51,7 +51,7 @@
                BlueprintIdentifier = "BitCollectionsTests"
                BuildableName = "BitCollectionsTests"
                BlueprintName = "BitCollectionsTests"
-               ReferencedContainer = "container:">
+               ReferencedContainer = "container:..">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -79,7 +79,7 @@
             BlueprintIdentifier = "BitCollections"
             BuildableName = "BitCollections"
             BlueprintName = "BitCollections"
-            ReferencedContainer = "container:">
+            ReferencedContainer = "container:..">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
